Somewhat improved overlap prevention

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -219,5 +219,4 @@ span.popup.bodytext {
 
 .stopPopup {
   opacity: 0.8 !important;
-  border: 1px solid black;
 }
